--- a/gw/projects/hello_dbg/Bender.yml
+++ b/gw/projects/hello_dbg/Bender.yml
@@ -15,21 +15,15 @@ dependencies:
 sources:
   - target: constraints
     files:
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/constrs/Arty-A7-35-Master.xdc
-  - target: memory_sim
-    files:
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/examples/hello/spram.mem
-  - target: memory_fpga
-    files:
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/examples/hello/spram.mem      
+      - constrs/Arty-A7-35-Master.xdc
   - target: verilator
     files:
       - sim/sim_main.cpp
-      - ../../sub/wbuart32/bench/cpp/uartsim.cpp
-      - ../../sub/riscv-dbg/tb/remote_bitbang/sim_jtag.c
-      - ../../sub/riscv-dbg/tb/remote_bitbang/remote_bitbang.c    
+      - ../../../sub/wbuart32/bench/cpp/uartsim.cpp
+      - ../../../sub/riscv-dbg/tb/remote_bitbang/sim_jtag.c
+      - ../../../sub/riscv-dbg/tb/remote_bitbang/remote_bitbang.c    
       - lint.vlt
-      - ../../sub/riscv-dbg/tb/SimJTAG.sv
+      - ../../../sub/riscv-dbg/tb/SimJTAG.sv
       - sim/sim_main.sv
   - target: any(vivado,verilator)
     defines:
@@ -38,9 +32,9 @@ sources:
     #spram and timer should be separate components, but since I won't use them
     #as Boxlambda components, I'm leaving them here in the hello world example
     files:
-      - ../../sub/ibex_wb/soc/common/rtl/wb_interconnect_sharedbus.sv
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/spramx32.sv      
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_spramx32.sv
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_timer.sv
-      - ../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/ibex_soc.sv
+      - ../../../sub/ibex_wb/soc/common/rtl/wb_interconnect_sharedbus.sv
+      - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/spramx32.sv      
+      - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_spramx32.sv
+      - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/wb_timer.sv
+      - ../../../sub/ibex_wb/soc/fpga/arty-a7-35/rtl/ibex_soc.sv
     
