Added lint_all rule.

--- a/gw/CMakeLists.txt
+++ b/gw/CMakeLists.txt
@@ -9,5 +9,7 @@ else()
     message(FATAL_ERROR "Invalid part number: ${BL_TARGET_FPGA}.")
 endif()
 
+add_custom_target(lint_all ALL)
+
 add_subdirectory(components)
 add_subdirectory(projects)
