--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.24 FATAL_ERROR)
   
 project(BoxLambda VERSION 0.1.0 LANGUAGES C ASM)
 
+#Build systems like Ninja can handle multiple configurations in one build tree.
+#We currently don't support that.
+
 get_property(isMultiConfig GLOBAL
     PROPERTY GENERATOR_IS_MULTI_CONFIG
 )
@@ -10,6 +13,7 @@ if(isMultiConfig)
     message(FATAL_ERROR "MultiConfig is not supported.")
 endif()
 
+#Currently, two build types are supported: -DCMAKE_BUILD_TYPE=fpga and -DCMAKE_BUILD_TYPE=sim
 set_property(CACHE CMAKE_BUILD_TYPE PROPERTY
     STRINGS fpga sim)
 
@@ -23,7 +27,10 @@ message("Build Type: ${CMAKE_BUILD_TYPE}.")
 
 enable_testing()
 
+#The software tree
 add_subdirectory(sw)
+
+#The gateware tree
 add_subdirectory(gw)
 
 
