--- a/gw/components/litedram/CMakeLists.txt
+++ b/gw/components/litedram/CMakeLists.txt
@@ -1,6 +1,5 @@
+#gw_component_rules function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE litedram_wrapper 
-    OOC_TARGET litedram 
-    VERILATOR_CPP_FLAGS "" 
-    VERILATOR_LD_FLAGS ""
+    OOC_TARGET litedram
 )
