--- a/gw/components/riscv-dbg/CMakeLists.txt
+++ b/gw/components/riscv-dbg/CMakeLists.txt
@@ -1,6 +1,5 @@
+#gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE riscv_dbg_wrapper 
     OOC_TARGET riscv-dbg 
-    VERILATOR_CPP_FLAGS "" 
-    VERILATOR_LD_FLAGS ""
 )
