--- a/gw/components/wbuart32/CMakeLists.txt
+++ b/gw/components/wbuart32/CMakeLists.txt
@@ -1,6 +1,5 @@
+#gw_component_rules() function is defined in the parent CMakeLists.txt.
 gw_component_rules(
     TOP_MODULE wb_wbuart_wrap_wrap 
     OOC_TARGET wbuart32 
-    VERILATOR_CPP_FLAGS "" 
-    VERILATOR_LD_FLAGS ""
 )
