--- a/gw/projects/ddr_test/CMakeLists.txt
+++ b/gw/projects/ddr_test/CMakeLists.txt
@@ -1,10 +1,11 @@
+#FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
     set(top_module ddr_test_soc)
 else()
     set(top_module sim_main)
 endif()
 
-
+#gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME ddr_test
@@ -16,9 +17,11 @@ gw_project_rules(
         -lncurses
 )
 
+#Add testcase
 add_test(NAME ddr_test_test
     COMMAND ./Vmodel
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+#This test requires a longer timeout.
 set_tests_properties(ddr_test_test PROPERTIES TIMEOUT 200) 
