--- a/gw/projects/hello_dbg/CMakeLists.txt
+++ b/gw/projects/hello_dbg/CMakeLists.txt
@@ -1,9 +1,11 @@
+#FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
     set(top_module ibex_soc)
 else()
     set(top_module sim_main)
 endif()
 
+#gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME hello_dbg
@@ -15,6 +17,7 @@ gw_project_rules(
         -lncurses
 )
 
+#Add testcase. This one's a script, not just the Verilator Vmodel executable.
 add_test(NAME hello_dbg_test
     COMMAND ${CMAKE_CURRENT_LIST_DIR}/test/test.sh ${PROJECT_SOURCE_DIR}
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
