--- a/sw/components/bootstrap/CMakeLists.txt
+++ b/sw/components/bootstrap/CMakeLists.txt
@@ -1,3 +1,5 @@
+#bootstrap is an Object Library, not a regular archive. We want to make sure vectors.S is included in the build,
+#even if nobody is referencing it.
 add_library(bootstrap OBJECT)
 
 target_sources(bootstrap
@@ -7,6 +9,7 @@ target_sources(bootstrap
         ../../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc/uart.c
 )
 
+#Paths to include files users of bootstrap are expected to use.
 target_include_directories(bootstrap
     PUBLIC
         ../../../sub/ibex_wb/soc/fpga/arty-a7-35/sw/libs/soc
