--- a/sw/projects/picolibc_test/CMakeLists.txt
+++ b/sw/projects/picolibc_test/CMakeLists.txt
@@ -3,4 +3,5 @@ add_executable(picolibc_test
 	picolibc_test.c
 )
 
+#Function defined in parent CMakeLists.txt file:
 link_internal_create_mem_file(picolibc_test)
