--- a/gw/projects/hello_world/CMakeLists.txt
+++ b/gw/projects/hello_world/CMakeLists.txt
@@ -1,3 +1,4 @@
+#gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ibex_soc
     PROJECT_NAME hello_world
@@ -7,6 +8,7 @@ gw_project_rules(
     VERILATOR_LD_FLAGS "-lncurses"
 )
 
+#Add testcase.
 add_test(NAME hello_world_test
     COMMAND ./Vmodel
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
