--- a/gw/projects/picolibc_test/CMakeLists.txt
+++ b/gw/projects/picolibc_test/CMakeLists.txt
@@ -1,10 +1,11 @@
+#FPGA and simulation builds have different top-levels.
 if(CMAKE_BUILD_TYPE STREQUAL "fpga")
     set(top_module ibex_soc)
 else()
     set(top_module sim_main)
 endif()
 
-
+#gw_project_rules() function is defined in the parent CMakeLists.txt.
 gw_project_rules(
     TOP_MODULE ${top_module}
     PROJECT_NAME picolibc_test
@@ -16,6 +17,7 @@ gw_project_rules(
         -lncurses
 )
 
+#Add testcase.
 add_test(NAME picolibc_test_test
     COMMAND ./Vmodel
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
